crates/toml_edit/tests/snapshots/invalid/spec-1.0.0/table-9-0.stderr
TOML parse error at line 5, column 8
  |
5 | [fruit.apple]  # INVALID
  |        ^^^^^
duplicate key
